@@ -14,6 +14,7 @@ Improve the task system to make it possible for Panels Everywhere to get more co
 #870466: Invisible steps broken by too aggressive of a test for valid wizard steps. This broke Mini Panel layout change in Panels.
 #872804: Export UI delete query failing to get table prefix thanks to PHP oddity.
 #867864: Fix a admin title and edit link problems with custom content types.
+#812744: Did not quite get query string removal working earlier, causing random breakages to AJAX requests.
 
 ctools 6.x-1.7 (2010-Jul-26)
 ==============
